# viperfish

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: reptoid.hpp  viperfish.hpp
include/viperfish/: binance.hpp  json.hpp  market.hpp  network.hpp  numbers.hpp  performance.hpp  rapid.hpp  reptoid.hpp  strings.hpp  utils.hpp
include/viperfish/binance/: consumer.hpp  exchange_info.hpp
include/viperfish/gzip/: decompress.hpp
include/viperfish/json/: getter.hpp  loader.hpp
include/viperfish/market/: market_data_consumer.hpp  obt.hpp  obt_manager.hpp  order_book.hpp  symbol.hpp
include/viperfish/network/: ws.hpp
include/viperfish/network/http/: http.hpp
include/viperfish/performance/: cpu.hpp
samples/binance-order-book/: .gitignore  CMakeLists.txt  main.cpp
src/: json.hpp  market.hpp  strings.cpp  timestamp.cpp  timestamp.hpp
src/binance/: consumer.hpp  exchange_info.hpp  mode.hpp
src/exchanges/binance/: exchange_info.cpp
src/exchanges/binance/consumer/: connection.cpp  consumer.cpp  fill.cpp  settings.cpp
src/gzip/: decompress.hpp
src/json/: getter.hpp  json_obj.hpp  loader.cpp  loader.hpp  nlohmann-json.hpp
src/market/: market_data_consumer.hpp  obt.cpp  obt.hpp  obt_manager.cpp  order.cpp  order.hpp  order_book.cpp  orderbook.cpp  orderbook.hpp  symbol.hpp
src/market/orderbook/: order.cpp  order.hpp  orderbook.cpp  orderbook.hpp
src/market/orderbook/large/: consumer.cpp  consumer.hpp
src/market/orderbook/top/: obt.cpp  obt.hpp  obt_manager.cpp  obt_manager.hpp
src/network/: sockets.hpp  ws.hpp
src/network/http/: context.cpp  curl.cpp  http.hpp  http_base.hpp
src/network/sockets/: sockets.cpp
src/network/ws/: ws_boost.cpp  ws_server.cpp
src/numbers/: float_utils.cpp  float_utils.hpp
src/performance/: cpu.cpp  dedicated.cpp  dedicated.hpp
src/reptoid/: api.cpp  api.hpp  binance-orderbook.cpp  binance-orderbook.hpp  binance-spot-context.cpp  orderbook.cpp
src/utils/: name_mixture.cpp  name_mixture.hpp  sleep.cpp  sleep.hpp
